# TypesetTranslate

./: .gitignore  README.md
typesetTranslate/: README.md  WORKFLOW.md  pyproject.toml
typesetTranslate/src/typesettranslate/: __init__.py  cli.py  models.py  paths.py  pdf_tools.py  planner.py  prompts.py  verification.py  workflow.py  workspace.py
typesetTranslate/src/typesettranslate/runners/: __init__.py  base.py  manifest.py  mock.py
wittenSUSYintro/: check-307-311.aux  check-307-311.out  check-322-326.aux  check-322-326.out  check-342-346.aux  wittenSUSYintro.aux  wittenSUSYintro.fdb_latexmk  wittenSUSYintro.fls  wittenSUSYintro.out  wittenSUSYintro.tex
wittenSUSYintro/chunks/: check-307-311.tex  check-322-326.tex  check-327-331.tex  check-342-346.tex  pp307-311.tex  pp312-316.tex  pp317-321.tex  pp322-326.tex  pp327-331.tex  pp332-336.tex  pp337-341.tex  pp342-346.tex  pp347-351.tex  pp352-355.tex
wittenSUSYintro/figures/: _fig_preview.tex  fig01.tex  fig02.tex  fig03.tex  fig04.tex  fig05.tex  fig06.tex  fig07.tex  fig08.tex  fig09.tex  fig10.tex  fig11.tex  fig12.tex  fig13.tex  fig14.tex  fig15.tex  fig16.tex  fig17.tex
