[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typesetTranslate"
version = "0.1.0"
description = "File-oriented orchestration for autonomous historical paper transcription."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Will Lancer" }
]
dependencies = []

[project.scripts]
paperbot = "typesettranslate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

